--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,12 @@
 {
   "extends": "airbnb",
   "rules": {
-    // Additional rules or overrides can be added here
+    "linebreak-style": ["error", "unix"],
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+    "react/require-default-props": 0,
+    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
+    "no-unused-vars": 1,
+    "no-undef": 0
+    // Add more rules or overrides as needed
   }
 }
