--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "build:test": "env-cmd -f .env.test react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "format": "prettier --write ."
   },
   "eslintConfig": {
@@ -69,7 +69,6 @@
     "@types/papaparse": "^5.3.8",
     "@types/yup": "^0.32.0",
     "eslint": "^8.53.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
