--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.13",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.4.2",
+    "i18next": "^23.6.0",
     "moment": "^2.29.4",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-i18next": "^13.3.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
