dashboard page in progress

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@types/react-i18next": "^8.1.0",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.4.2",
     "i18next": "^23.6.0",
     "moment": "^2.29.4",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-i18next": "^13.3.1",
