--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/papaparse": "^5.3.8",
+    "@types/react-slick": "^0.23.12",
     "@types/yup": "^0.32.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
