--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.13",
     "@types/react-i18next": "^8.1.0",
     "@types/react-redux": "^7.1.25",
+    "@types/react-table": "^7.7.18",
     "axios": "^1.4.0",
     "chart.js": "^4.4.0",
     "env-cmd": "^10.1.0",
@@ -35,6 +36,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-table": "^7.8.0",
     "redux": "^4.2.1",
     "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
