--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dropzone": "^14.2.3",
     "react-i18next": "^13.3.1",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
