--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.4",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -78,6 +79,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/papaparse": "^5.3.8",
+    "@types/react-avatar-editor": "^13.0.2",
     "@types/react-slick": "^0.23.12",
     "@types/yup": "^0.32.0",
     "eslint": "^8.53.0",
