--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-simple-keyboard": "^3.7.52",
     "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "redux": "^4.2.1",
@@ -82,13 +83,15 @@
     "@types/react-avatar-editor": "^13.0.2",
     "@types/react-slick": "^0.23.12",
     "@types/yup": "^0.32.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
+    "postcss": "^8.4.32",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.6"
   }
 }
