--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^4.4.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.4.2",
+    "html-react-parser": "^5.0.11",
     "i18next": "^23.6.0",
     "moment": "^2.29.4",
     "papaparse": "^5.4.1",
